--- a/wedding-fe/src/app/gallery/gallery.component.html
+++ b/wedding-fe/src/app/gallery/gallery.component.html
@@ -1,4 +1,5 @@
 <div class="page-container">
+  <h1>Gallery</h1>
   <div class="grid-gallery">
     <div class="grid-item" *ngFor="let image of images; let i = index">
       <img [src]="image.data.thumb"
@@ -6,5 +7,6 @@
            [attr.thumbSrc]="image.data.thumb"
            (click)="lightbox.open(i, 'lightbox', {panelClass: 'fullscreen'})">
     </div>
+    <div class="grid-filler"></div>
   </div>
 </div>
