make image fill flex container to leave no gaps

--- a/wedding-fe/src/app/gallery/gallery.component.scss
+++ b/wedding-fe/src/app/gallery/gallery.component.scss
@@ -21,6 +21,7 @@
         max-width: 100%;
         object-fit: cover;
         vertical-align: bottom;
+        width: 100%;
       }
     }
     .grid-filler {
