--- a/wedding-fe/src/app/gallery/gallery.component.scss
+++ b/wedding-fe/src/app/gallery/gallery.component.scss
@@ -13,7 +13,7 @@
     flex-wrap: wrap;
 
     .grid-item {
-      height: 200px; // to be changed
+      height: 25vh;
       flex-grow: 1;
       transition: transform 0.1s ease-in-out;
 
