--- a/wedding-fe/src/app/gallery/gallery.component.html
+++ b/wedding-fe/src/app/gallery/gallery.component.html
@@ -1,7 +1,7 @@
 <div class="page-container">
   <h1>Gallery</h1>
   <div class="grid-gallery">
-    <div class="grid-item" *ngFor="let image of images; let i = index">
+    <div class="grid-item mat-elevation-z2" *ngFor="let image of images; let i = index" materialElevation>
       <img [src]="image.data.thumb"
            [attr.imageSrc]="image.data.src"
            [attr.thumbSrc]="image.data.thumb"
