improve menu bar styling

--- a/wedding-fe/src/app/app.component.html
+++ b/wedding-fe/src/app/app.component.html
@@ -24,7 +24,7 @@
           </button>
         </div>
       </mat-toolbar>
-      <router-outlet></router-outlet>
+      <router-outlet class="router-container"></router-outlet>
     </mat-sidenav-content>
   </mat-sidenav-container>
 </div>
