--- a/wedding-fe/src/styles.scss
+++ b/wedding-fe/src/styles.scss
@@ -20,8 +20,8 @@ h1 {
 }
 
 .menu-bar {
-  background: rgb(255, 255, 255);
-  background: linear-gradient(180deg, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.6) 50%, rgba(255, 255, 255, 0) 100%);
+  background: rgba(255, 255, 255, 0.8);
+  //background: linear-gradient(180deg, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.6) 50%, rgba(255, 255, 255, 0) 100%);
 }
 
 .dark-overlay {
