--- a/wedding-fe/src/app/app.component.scss
+++ b/wedding-fe/src/app/app.component.scss
@@ -15,3 +15,13 @@
     flex: 1 1 auto;
   }
 }
+
+.router-container{
+  display: block;
+  margin-top: 64px;
+  transition: margin-top 0.2s ease-in-out;
+
+  @media (max-width: 599px) {
+    margin-top: 56px;
+  }
+}
