indicate the primary colour

--- a/wedding-fe/src/theme.scss
+++ b/wedding-fe/src/theme.scss
@@ -8,7 +8,7 @@ $bronze-palette: (
   300: #e4b572,
   400: #dfa75c,
   500: #d99a51,
-  600: #d4904c,
+  600: #d48f4c, // primary
   700: #cc8346,
   800: #c37742,
   900: #b3663e,
