update section seperator to use var colour

--- a/wedding-fe/src/styles.scss
+++ b/wedding-fe/src/styles.scss
@@ -46,7 +46,7 @@ h1 {
   flex-direction: row;
   justify-content: center;
   padding: 20px;
-  color: #d48f4c;
+  color: $light-primary-color;
 }
 
 mat-toolbar {
