--- a/wedding-fe/src/app/app.component.html
+++ b/wedding-fe/src/app/app.component.html
@@ -9,6 +9,9 @@
     </mat-sidenav>
     <mat-sidenav-content fxFlexFill>
       <mat-toolbar class="menu-bar">
+        <a class="logo-container" [routerLink]="'/home'">
+          <img class="logo" src="assets/RE-logo.png">
+        </a>
         <span class="example-spacer"></span>
         <div fxShow="true" fxHide.lt-md="true">
           <!-- The following menu items will be hidden on both SM and XS screen sizes -->
