--- a/wedding-fe/src/app/app.component.scss
+++ b/wedding-fe/src/app/app.component.scss
@@ -14,6 +14,18 @@
   .example-spacer {
     flex: 1 1 auto;
   }
+
+  .logo-container {
+    height: 80%;
+    width: 120px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+    .logo {
+      height: 100%;
+    }
+  }
 }
 
 .router-container{
