show flipbook on home page

--- a/wedding-fe/src/app/home/home.component.html
+++ b/wedding-fe/src/app/home/home.component.html
@@ -114,8 +114,8 @@
     </div>
   </div>
   <span class="section-seperator">~<mat-icon>favorite_border</mat-icon>~</span>
-  <div id="gallery-preview" class="section" fxLayout="column" fxLayoutAlign="center center">
-    <h2>Gallery</h2>
-
+  <div id="album" class="section" fxLayout="column" fxLayoutAlign="center center">
+    <h2>Wedding Album</h2>
+    <app-flipbook [pages$]="flipbookPages"></app-flipbook>
   </div>
 </div>
