--- a/wedding-fe/src/app/home/home.component.html
+++ b/wedding-fe/src/app/home/home.component.html
@@ -94,8 +94,8 @@
       <div class="text-content" fxLayout="column" fxLayoutAlign="center center" [gdArea]="'content'">
         <h2>Our Story</h2>
         <p>Ryane and Emelyne met in 2005 in the first year of secondary school. With piercing eyes, melancholic stature,
-          a good sense of humour and a great face, Ryane was a fun person to be with. He found Emelyne to complement him
-          with a bubbly yet carefree nature, punny with an even prettier face and just as loud.
+          and a good sense of humour, Ryane was a fun person to be with. He found Emelyne to complement him
+          with a bubbly yet carefree nature, punny and just as loud.
           He eventually left for Australia in 2006 with his family and maintaining contact was only by the means of an
           MSN chat platform or costly IDD calling cards.
         </p>
