--- a/wedding-fe/src/app/rsvp/rsvp.component.html
+++ b/wedding-fe/src/app/rsvp/rsvp.component.html
@@ -1,8 +1,7 @@
 <div class="page-container">
   <div class="form-container">
     <iframe
-      src="https://docs.google.com/forms/d/e/1FAIpQLSc0RLoSLXNyRADEQ2VoJU9GCsr1LZcpSymAccjyiU6pyxrjlA/viewform?embedded=true"
-      frameborder="0" marginheight="0" marginwidth="0">Loading…
+      src="https://docs.google.com/forms/d/e/1FAIpQLSc0RLoSLXNyRADEQ2VoJU9GCsr1LZcpSymAccjyiU6pyxrjlA/viewform?embedded=true">Loading…
     </iframe>
   </div>
 </div>
