styling for hashtag popup

--- a/wedding-fe/src/app/utils/social-popup/social-popup.component.html
+++ b/wedding-fe/src/app/utils/social-popup/social-popup.component.html
@@ -1,7 +1,23 @@
-<h2>
-  See the hashtags on the socials
-</h2>
+<div class="popup-container">
+  <h2>
+    See how everyone has been sharing our day!
+  </h2>
 
-<div id="instagram-link"><a href="https://www.instagram.com/explore/tags/ryaneeme22/">See on Instagram</a> </div>
-<div id="facebook-link"><a href="https://www.facebook.com/hashtag/ryaneeme22">See on Facebook</a></div>
-<div id="tiktok-link"><a href="https://www.tiktok.com/tag/ryaneeme22?lang=en">See on TikTok</a> </div>
+  <div class="link-container">
+  <div mat-ripple id="instagram" class="link">
+    <a href="https://www.instagram.com/explore/tags/ryaneeme22/">
+      <img class="icon" src="assets/instagram_icon.svg"><span>See on Instagram</span>
+    </a>
+  </div>
+  <div mat-ripple id="facebook" class="link">
+    <a href="https://www.facebook.com/hashtag/ryaneeme22">
+      <img class="icon" src="assets/fb_icon.svg"><span>See on Facebook</span>
+    </a>
+  </div>
+  <div mat-ripple id="tiktok" class="link">
+    <a href="https://www.tiktok.com/tag/ryaneeme22?lang=en">
+      <img class="icon" src="assets/tiktok_icon.svg"><span>See on TikTok</span>
+    </a>
+  </div>
+  </div>
+</div>
