make headings same font

--- a/wedding-fe/src/styles.scss
+++ b/wedding-fe/src/styles.scss
@@ -19,6 +19,13 @@ h1 {
   line-height: 52px !important;
 }
 
+h2 {
+  font-size: 48px !important;
+  font-weight: bold !important;
+  font-family: 'Tangerine', cursive !important;
+  line-height: 48px !important;
+}
+
 .menu-bar {
   background: rgba(255, 255, 255, 0.8);
   //background: linear-gradient(180deg, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.6) 50%, rgba(255, 255, 255, 0) 100%);
