update social popup styling

--- a/wedding-fe/src/app/utils/social-popup/social-popup.component.html
+++ b/wedding-fe/src/app/utils/social-popup/social-popup.component.html
@@ -1,7 +1,7 @@
 <div class="popup-container">
-  <h2>
+  <div class="mat-h2">
     See how everyone has been sharing our day!
-  </h2>
+  </div>
 
   <div class="link-container">
   <div mat-ripple id="instagram" class="link">
