--- a/wedding-fe/src/app/home/home.component.html
+++ b/wedding-fe/src/app/home/home.component.html
@@ -39,7 +39,7 @@
         </div>
         <h2>Share Our Day</h2>
         <div class="infospace">
-          <p>Share your pictures on the day with <button mat-stroked-button color="primary" (click)="viewHashtags()">#RYANEEME22M</button> on your socials</p>
+          <p>Share your pictures on the day with <button mat-stroked-button color="primary" (click)="viewHashtags()">#RYANEEME22</button> on your socials</p>
         </div>
       </div>
       <div class="portrait-image-container"
