--- a/wedding-fe/src/app/home/home.component.html
+++ b/wedding-fe/src/app/home/home.component.html
@@ -32,7 +32,7 @@
         <h2>Wedding Info</h2>
         <div class="infospace">
           <h3>Dress Code: Dress to Impress</h3>
-          <p>We wish we could include everyone but unfortunately,
+          <p>We wish we could include everyone, but unfortunately,
             due to the venue and the evolving COVID 19 restrictions,
             we are only able to invite individuals who are vaccinated.
             We hope you understand and use this opportunity to let your hair down and have a good time!</p>
@@ -96,10 +96,10 @@
         <p>Ryane and Emelyne met in 2005 in the first year of secondary school. With piercing eyes, melancholic stature,
           and a good sense of humour, Ryane was a fun person to be with. He found Emelyne to complement him
           with a bubbly yet carefree nature, punny and just as loud.
-          He eventually left for Australia in 2006 with his family and maintaining contact was only by the means of an
+          He eventually left for Australia in 2006 with his family and maintained contact only through an
           MSN chat platform or costly IDD calling cards.
         </p>
-        <p>However, it wasn’t until the Christmas of 2008 that locked in their persistence to maintain a long-distance
+        <p>However, it wasn’t until the Christmas of 2008 that they locked in their persistence to maintain a long-distance
           relationship until Ryane decided to return home (to Emelyne) and serve the nation in 2010.
         </p>
         <p>
